@@ -28,12 +28,12 @@
     </dependencies>
 
     <build>
-        <finalName>minimalist-saas-backend</finalName>
+        <!-- 项目打包名称 -->
+        <finalName>${project.package.name}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${springboot.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -45,8 +45,6 @@
                 <configuration>
                     <!-- 打包指定启动类 -->
                     <mainClass>com.minimalist.application.MinimalistBasicApplication</mainClass>
-                    <!-- 打包为可执行文件 -->
-                    <classifier>exec</classifier>
                     <!-- 打包时忽略的包 -->
                     <excludes>
                         <exclude>
@@ -58,16 +56,6 @@
                             <artifactId>velocity-engine-core</artifactId>
                         </exclude>
                     </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
